@@ -32,13 +32,9 @@ expect_equal(Cp, lprop$Cp, tolerance = 1e-5, info = info)
 expect_equal(V, lprop$V, tolerance = 1e-4, info = info)
 expect_equal(formula, lprop$formula, info = info)
 
-info <- "read_fasta() identifies sequences correctly and gives amino acid compositions in the correct format"
+info <- "add.protein() works with output of canprot::read_fasta()"
 ffile <- system.file("extdata/protein/rubisco.fasta", package = "CHNOSZ")
-aa <- canprot::read_fasta(ffile)
-expect_equal(aa[1, ], canprot::read_fasta(ffile, 1), info = info)
-# Use unlist here so that different row names are not compared
 aa8 <- canprot::read_fasta(ffile, 1:8)
-expect_equal(unlist(aa[1:8, ]), unlist(aa8), info = info)
 expect_message(ip1 <- add.protein(aa8), "added 8 new protein\\(s\\)", info = info)
 expect_message(ip2 <- add.protein(aa8), "replaced 8 existing protein\\(s\\)", info = info)
 # add.protein should return the correct indices for existing proteins
